--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,11 @@ on:
 #    tags:
 #      - 'v*'  # Trigger only on version tags like v1.0.0
   workflow_dispatch:
-
+    inputs:
+      release_tag:
+        description: 'Release tag (e.g., v1.0.1)'
+        required: true
+        type: string
 
 jobs:
   build-msi:
