--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,15 +1,9 @@
 name: Build and Release MSI
 
 on:
-#  push:
-#    tags:
-#      - 'v*'  # Trigger only on version tags like v1.0.0
-  workflow_dispatch:
-    inputs:
-      release_tag:
-        description: 'Release tag (e.g., v1.0.1)'
-        required: true
-        type: string
+  push:
+    tags:
+      - 'v*'  # Trigger only on version tags like v1.0.0
 
 jobs:
   build-msi:
@@ -41,6 +35,9 @@ jobs:
         run: |
           $msi = Get-ChildItem -Recurse -Filter "*.msi" | Select-Object -First 1
           echo "MSI_PATH=$($msi.FullName)" >> $env:GITHUB_ENV
+          
+          $msiPath = $msi.FullName -replace '\\', '/'
+          echo "MSI_PATH=$msiPath" >> $env:GITHUB_ENV
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
