--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,6 @@
-name: Build and Release MSI
+name: Build and Release Installers
 
 on:
-#  push:
-#    tags:
-#      - 'v*'  # Trigger only on version tags like v1.0.0
   workflow_dispatch:
     inputs:
       release_tag:
@@ -14,6 +11,9 @@ on:
 jobs:
   build-msi:
     runs-on: windows-latest
+    outputs:
+      msi_path: ${{ steps.find-msi.outputs.msi_path }}
+      jar_path: ${{ steps.find-jar.outputs.jar_path }}
 
     steps:
       - name: Checkout code
@@ -25,10 +25,8 @@ jobs:
           distribution: temurin
           java-version: 21
 
-      - name: Grant execute permission to Gradle wrapper
-        run: |
-          git config --global core.autocrlf false
-          ./gradlew --version
+      - name: Verify Gradle
+        run: ./gradlew --version
 
       - name: Package MSI
         run: ./gradlew packageApp
@@ -37,27 +35,91 @@ jobs:
         id: find-msi
         run: |
           $msi = Get-ChildItem -Recurse -Filter "*.msi" | Select-Object -First 1
-          
-          $msiPath = $msi.FullName -replace '\\', '/'
-          echo "MSI_PATH=$msiPath" >> $env:GITHUB_ENV
+          echo "msi_path=$($msi.FullName -replace '\\', '/')" >> $env:GITHUB_OUTPUT
 
       - name: Find fat JAR
         id: find-jar
         run: |
           $jar = Get-ChildItem -Path "$env:GITHUB_WORKSPACE\build\libs" -Filter "*.jar" | Where-Object { $_.Name -notlike "*-plain*" } | Select-Object -First 1
           if ($null -eq $jar) {
-            Write-Error "No jar found at $env:GITHUB_WORKSPACE\build\libs"
+            Write-Error "No jar found."
             exit 1
           }
-          $jarPath = $jar.FullName -replace '\\', '/'
-          echo "FAT_JAR_PATH=$jarPath" >> $env:GITHUB_ENV
+          echo "jar_path=$($jar.FullName -replace '\\', '/')" >> $env:GITHUB_OUTPUT
+
+  build-dmg:
+    runs-on: macos-latest
+    needs: build-msi
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Verify Gradle
+        run: ./gradlew --version
+
+      - name: Package DMG
+        run: ./gradlew packageApp
+
+      - name: Find DMG
+        id: find-dmg
+        run: |
+          DMG_PATH=$(find build/out -name "*.dmg" | head -n 1)
+          echo "DMG_PATH=$DMG_PATH" >> $GITHUB_ENV
+          echo "dmg_path=$DMG_PATH" >> $GITHUB_OUTPUT
+
+  build-deb:
+    runs-on: ubuntu-latest
+    needs: build-msi
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Install jpackage dependencies
+        run: sudo apt update && sudo apt install -y fakeroot libfuse2
+
+      - name: Verify Gradle
+        run: ./gradlew --version
+
+      - name: Package DEB
+        run: ./gradlew packageApp
+
+      - name: Find DEB
+        id: find-deb
+        run: |
+          DEB_PATH=$(find build/out -name "*.deb" | head -n 1)
+          echo "DEB_PATH=$DEB_PATH" >> $GITHUB_ENV
+          echo "deb_path=$DEB_PATH" >> $GITHUB_OUTPUT
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [ build-msi, build-dmg, build-deb ]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.event.inputs.release_tag || github.ref_name }}
           files: |
-            ${{ env.MSI_PATH }}
-            ${{ env.FAT_JAR_PATH }}
+            ${{ needs.build-msi.outputs.msi_path }}
+            ${{ needs.build-msi.outputs.jar_path }}
+            ${{ needs.build-dmg.outputs.dmg_path }}
+            ${{ needs.build-deb.outputs.deb_path }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
