--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,6 +54,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -81,6 +84,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
