--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ javafx {
 }
 
 def tag = 'git describe --tags --abbrev=0'.execute().text.trim()
-version = tag.replaceFirst("^v", "") ?: '1.0.0'
+version = tag ? tag.replaceFirst("^v", "") : '1.0.0'
 
 shadowJar {
     archiveClassifier.set("all")
