--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -168,6 +168,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN || secrets.GH_PAT }}
           tag_name: ${{ github.event.inputs.release_tag || github.ref_name }}
           files: |
             *.msi
